# rsmarisa

./: .gitignore  .tagpr  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INVESTIGATION.md  LICENSE  PORTING_STATUS.md  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml  tagpr.yml
examples/: basic_usage.rs  bench.rs  save_load.rs
src/: agent.rs  base.rs  key.rs  keyset.rs  lib.rs  query.rs  trie.rs
src/grimoire/: mod.rs
src/grimoire/algorithm/: mod.rs  sort.rs
src/grimoire/io/: mapper.rs  mod.rs  reader.rs  writer.rs
src/grimoire/trie/: cache.rs  config.rs  entry.rs  header.rs  history.rs  key.rs  louds_trie.rs  mod.rs  range.rs  state.rs  tail.rs
src/grimoire/vector/: bit_vector.rs  flat_vector.rs  mod.rs  pop_count.rs  rank_index.rs  select_bit.rs  select_tables.rs  vector.rs
tests/: base_test.rs  basic_lookup_test.rs  binary_compat_test.rs  cli_tools_test.rs  cpp_binary_test  cpp_binary_test.cc  cpp_cache_test.cc  cpp_compatibility_test.rs  cpp_debug_offsets.cc  cpp_debug_sort.cc  cpp_debug_tail  cpp_debug_tail.cc  cpp_load_rust_binary  cpp_load_rust_binary.cc  cpp_load_test  cpp_load_test.cc  cpp_simple_trie.cc  cpp_test_15words.cc  cpp_test_6_vs_7.cc  key_sort_test.rs  minimal_failing_test.rs  trie_build_trace_test.rs
