[package]
name = "marisa"
version = "0.1.0"
edition = "2021"
authors = ["rust-marisa contributors"]
license = "BSD-2-Clause"
description = "Rust port of marisa-trie: a static and space-efficient trie data structure"
repository = "https://github.com/tokuhirom/rust-marisa"
keywords = ["trie", "data-structure", "marisa", "search"]
categories = ["data-structures", "algorithms"]
rust-version = "1.70"

[dependencies]

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "marisa"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = []

[[example]]
name = "save_load"
path = "examples/save_load.rs"
required-features = []

[[bin]]
name = "binary_compatibility_test"
path = "bin/binary_compatibility_test.rs"

[[bin]]
name = "test_sort"
path = "bin/test_sort.rs"

[[bin]]
name = "test_key_order"
path = "bin/test_key_order.rs"

[[bin]]
name = "test_entry_sort"
path = "bin/test_entry_sort.rs"

[[bin]]
name = "test_a_app"
path = "bin/test_a_app.rs"

[[bin]]
name = "test_load_cpp"
path = "bin/test_load_cpp.rs"

[[bin]]
name = "test_15words_lookup"
path = "bin/test_15words_lookup.rs"


[[bin]]
name = "simple_15words_test"
path = "bin/simple_15words_test.rs"


[[bin]]
name = "debug_missing_words"
path = "bin/debug_missing_words.rs"


[[bin]]
name = "debug_application"
path = "bin/debug_application.rs"


[[bin]]
name = "find_breaking_point"
path = "bin/find_breaking_point.rs"


[[bin]]
name = "test_6_vs_7_words"
path = "bin/test_6_vs_7_words.rs"


[[bin]]
name = "test_rust_7words_lookup"
path = "bin/test_rust_7words_lookup.rs"


[[bin]]
name = "debug_entry_indexing"
path = "bin/debug_entry_indexing.rs"


[[bin]]
name = "debug_sort_order"
path = "bin/debug_sort_order.rs"


[[bin]]
name = "debug_build_tail"
path = "bin/debug_build_tail.rs"


[[bin]]
name = "test_string_comparer"
path = "bin/test_string_comparer.rs"

