[package]
name = "rsmarisa"
version = "0.1.0"
edition = "2021"
authors = ["rust-marisa contributors"]
license = "BSD-2-Clause"
description = "Pure Rust port of marisa-trie: a static and space-efficient trie data structure"
repository = "https://github.com/tokuhirom/rust-marisa"
homepage = "https://github.com/tokuhirom/rust-marisa"
documentation = "https://docs.rs/rsmarisa"
readme = "README.md"
keywords = ["trie", "data-structure", "marisa", "search"]
categories = ["data-structures", "algorithms"]
rust-version = "1.70"
exclude = [
    "bin/*.rs",
    "tests/cpp_*.cc",
    ".github/",
    "CLAUDE.md",
    "PORTING_STATUS.md",
    "*.marisa",
]

[dependencies]
# Required for CLI tools (rsmarisa-*)
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "marisa"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = []

[[example]]
name = "save_load"
path = "examples/save_load.rs"
required-features = []

# CLI Tools
[[bin]]
name = "rsmarisa-build"
path = "src/bin/rsmarisa-build.rs"

[[bin]]
name = "rsmarisa-lookup"
path = "src/bin/rsmarisa-lookup.rs"

[[bin]]
name = "rsmarisa-dump"
path = "src/bin/rsmarisa-dump.rs"

[[bin]]
name = "rsmarisa-common-prefix-search"
path = "src/bin/rsmarisa-common-prefix-search.rs"

[[bin]]
name = "rsmarisa-predictive-search"
path = "src/bin/rsmarisa-predictive-search.rs"

[[bin]]
name = "rsmarisa-reverse-lookup"
path = "src/bin/rsmarisa-reverse-lookup.rs"

