[package]
name = "rsmarisa"
version = "0.4.0"
edition = "2021"
authors = ["rust-marisa contributors"]
license = "BSD-2-Clause"
description = "Pure Rust port of marisa-trie: a static and space-efficient trie data structure"
repository = "https://github.com/tokuhirom/rsmarisa"
homepage = "https://github.com/tokuhirom/rsmarisa"
documentation = "https://docs.rs/rsmarisa"
readme = "README.md"
keywords = ["trie", "data-structure", "marisa", "search"]
categories = ["data-structures", "algorithms"]
rust-version = "1.70"
exclude = [
    "bin/*.rs",
    "tests/cpp_*.cc",
    ".github/",
    "CLAUDE.md",
    "PORTING_STATUS.md",
    "*.marisa",
]

[features]
default = ["native"]

## High-level target modes (pick one)

# Full native: OS threads via rayon + memory-mapped file I/O
native = ["parallel", "mmap"]

# WASM without threads: sequential sort, no mmap.
# Data is loaded via `Mapper::open_memory()` from host-provided buffers.
wasm = []

# WASM with Web Worker threads: rayon parallelism via wasm-bindgen-rayon.
# Requires nightly Rust, SharedArrayBuffer, and COOP/COEP headers.
# Call `initThreadPool(n)` from JS before using the library.
# Pass n=1 for single-thread mode, or navigator.hardwareConcurrency for full parallelism.
wasm-threads = ["parallel", "dep:wasm-bindgen", "dep:wasm-bindgen-rayon"]

## Low-level features (used by modes above; can be set independently)
parallel = ["dep:rayon"]
mmap = ["dep:memmap2"]

[dependencies]
# Required for CLI tools (rsmarisa-*)
clap = { version = "4.5", features = ["derive"] }
# Memory-mapped file I/O (native only)
memmap2 = { version = "0.9", optional = true }
# Succinct data structures: BitVec + RsVec for rank/select queries
vers-vecs = "1.9"
# Parallel iterators for sort acceleration
rayon = { version = "1", optional = true }
# WASM thread pool support (wasm-threads mode only)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "rsmarisa"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = []

[[example]]
name = "save_load"
path = "examples/save_load.rs"
required-features = []

# CLI Tools
[[bin]]
name = "rsmarisa-build"
path = "src/bin/rsmarisa-build.rs"

[[bin]]
name = "rsmarisa-lookup"
path = "src/bin/rsmarisa-lookup.rs"

[[bin]]
name = "rsmarisa-dump"
path = "src/bin/rsmarisa-dump.rs"

[[bin]]
name = "rsmarisa-common-prefix-search"
path = "src/bin/rsmarisa-common-prefix-search.rs"

[[bin]]
name = "rsmarisa-predictive-search"
path = "src/bin/rsmarisa-predictive-search.rs"

[[bin]]
name = "rsmarisa-reverse-lookup"
path = "src/bin/rsmarisa-reverse-lookup.rs"

# Development/testing binary (not published due to exclude pattern)
[[bin]]
name = "binary_compatibility_test"
path = "bin/binary_compatibility_test.rs"
